# evoarena

./: CMakeLists.txt  build.sh  main.cpp
include/: Arena.hpp
include/Strategy/: AlwaysFalse.hpp  AlwaysTrue.hpp  EyeForEye.hpp  Gmdh.hpp  IStrategy.hpp  Rule.hpp  Value.hpp
src/: Arena.cpp
src/Strategy/: Gmdh.cpp
